manifests/deployment-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-app-frontend-dep
  namespace: project
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-app-frontend
  template:
    metadata:
      labels:
        app: todo-app-frontend
        common: todo-app
    spec:
      nodeSelector:
        kubernetes.io/hostname: k3d-mooc-agent-0
      containers:
        - name: todo-app-frontend
          image: temibonn/todo-app-frontend:v1.2.5
          ports:
            - containerPort: 3000
