manifests/service-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-app-frontend-svc
  namespace: project
spec:
  type: ClusterIP
  selector:
    app: todo-app-frontend
  ports:
    - name: todo-app-frontend
      protocol: TCP
      port: 3000
      targetPort: 3000
