manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo-app-ingress
  namespace: project
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: todo-app-frontend-svc
                port:
                  number: 3000
          - path: /todos
            pathType: Prefix
            backend:
              service:
                name: todo-app-backend-svc
                port:
                  number: 3001
